...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout="@layout/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homeFragment">

<include
        android:id="@+id/include2"
        layout="@layout/fragment_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSearch"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:clickable="true"
...
