<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="4dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTopic"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="10"
                android:fontFamily="@font/open_sans"
                android:singleLine="true"
                android:text="Viruses"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="90"
                android:background="@android:color/transparent"
                android:paddingRight="10dp"
                android:scaleType="fitEnd"
                app:srcCompat="@drawable/arrow_right" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>