<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include3"
        layout="@layout/fragment_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ivPolitie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/logo_politie"
        android:contentDescription="@string/politie_logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include3" />

    <EditText
        android:id="@+id/etEmail"
        android:maxLength="254"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/placeholder_email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#BFBFBF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/include3"
        app:layout_constraintTop_toBottomOf="@+id/ivPolitie"
        android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS" />

    <EditText
        android:id="@+id/etPassword"
        android:maxLength="128"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/placeholder_pass"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#BFBFBF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/include3"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:autofillHints="AUTOFILL_HINT_PASSWORD"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/bg_round_button"
        android:elevation="4dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"

        app:layout_constraintBottom_toBottomOf="@+id/include3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.205" />

    <include
        android:id="@+id/warning"
        layout="@layout/fragment_warning_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/transparent"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintBottom_toBottomOf="@+id/include3"
        app:layout_constraintEnd_toStartOf="@+id/include3"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/abc_vector_test"
        android:contentDescription="@string/back_button_description" />
</androidx.constraintlayout.widget.ConstraintLayout>